--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -27,7 +27,8 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         pip install -r requirements.txt
-        pip install .
+        pip install --force-reinstall -i https://software.repos.intel.com/python/pypi numpy scipy
+        pip install -e .
 
   run-on-windows:
     name: Setup on windows
@@ -48,7 +49,8 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         pip install -r requirements.txt
-        pip install .
+        pip install --force-reinstall -i https://software.repos.intel.com/python/pypi numpy scipy
+        pip install -e .
 
   run-on-macos:
     name: Setup on macos
@@ -69,4 +71,5 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         pip install -r requirements.txt
-        pip install .
+        pip install --force-reinstall -i https://software.repos.intel.com/python/pypi numpy scipy
+        pip install -e .
