--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ pyzmq==26.4.0
 qpsolvers==4.7.0
 requests==2.32.3
 scikit-learn==1.6.1
-scipy==1.15.3
+# scipy==1.15.3
 seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
