--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -31,11 +31,11 @@ jobs:
         pip install -e .
     - name: Run algorithms
       run: |
-        python run_folktables.py alg=sslalm n_runs=2 run_maxtime=2
-        python run_folktables.py alg=ghost n_runs=2 run_maxtime=2
-        python run_folktables.py alg=alm n_runs=2 run_maxtime=2
-        python run_folktables.py alg=sgd n_runs=2 run_maxtime=2
-        python run_folktables.py alg=fairret n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=sslalm n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=ghost n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=alm n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=sgd n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=fairret n_runs=2 run_maxtime=2
 
   run-on-windows:
     name: Setup on windows
@@ -60,11 +60,11 @@ jobs:
         pip install -e .
     - name: Run algorithms
       run: |
-        python run_folktables.py alg=sslalm n_runs=2 run_maxtime=2
-        python run_folktables.py alg=ghost n_runs=2 run_maxtime=2
-        python run_folktables.py alg=alm n_runs=2 run_maxtime=2
-        python run_folktables.py alg=sgd n_runs=2 run_maxtime=2
-        python run_folktables.py alg=fairret n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=sslalm n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=ghost n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=alm n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=sgd n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=fairret n_runs=2 run_maxtime=2
 
   run-on-macos:
     name: Setup on macos
@@ -88,8 +88,8 @@ jobs:
         pip install -e .
     - name: Run algorithms
       run: |
-        python run_folktables.py alg=sslalm n_runs=2 run_maxtime=2
-        python run_folktables.py alg=ghost n_runs=2 run_maxtime=2
-        python run_folktables.py alg=alm n_runs=2 run_maxtime=2
-        python run_folktables.py alg=sgd n_runs=2 run_maxtime=2
-        python run_folktables.py alg=fairret n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=sslalm n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=ghost n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=alm n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=sgd n_runs=2 run_maxtime=2
+        python experiments/run_folktables.py alg=fairret n_runs=2 run_maxtime=2
