--- a/experiments/conf/alg/sslalm-torch.yaml
+++ b/experiments/conf/alg/sslalm-torch.yaml
@@ -1,15 +1,15 @@
 # name of the algorithm class to import form src.algorithms
-import_name: SSLALM
+import_name: TorchSSLALM
+save_name: sslalm-torch
 
 params:
   batch_size: 16
   epochs: null
-  lambda_bound: 25
+  lambda_bound: 50
   mu: 2.
   rho: 1.
   tau: 0.01
-  eta: 5e-2
+  tau_mult: 1
+  eta: 0.05
   beta: 0.5
-  vr_mult_obj: 1.
-  vr_mult_cval: 1.
-  vr_mult_cgrad: 1.
+  use_unbiased_penalty_grad: True
