--- a/experiments/conf/alg/tame_prox.yaml
+++ b/experiments/conf/alg/tame_prox.yaml
@@ -1,5 +1,6 @@
 # name of the algorithm class to import form src.algorithms
-import_name: SSLALM
+import_name: TameALM
+save_name: TameProx
 
 params:
   batch_size: 8
@@ -7,9 +8,7 @@ params:
   lambda_bound: 10
   mu: 2.
   rho: 1.
-  tau: 0.01
-  eta: 5e-2
-  beta: 0.5
-  vr_mult_obj: 1.
-  vr_mult_cval: 1.
-  vr_mult_cgrad: 1.
+  tau: 0.05
+  eta: 10.0
+  beta: 10.0
+  mapping: "prox"
