--- a/experiments/conf/constraint/eq_loss.yaml
+++ b/experiments/conf/constraint/eq_loss.yaml
@@ -1,4 +1,5 @@
-import_name: one_sided_loss_constr
+import_name: loss_equality
 
-c_batch_size: 8
+c_batch_size: 16
 bound: 0.005
+add_negative: True
