--- a/experiments/conf/alg/ssg.yaml
+++ b/experiments/conf/alg/ssg.yaml
@@ -8,6 +8,6 @@ params:
   ctol: 0.1
   f_stepsize_rule: const
   f_stepsize: 0.1
-  c_stepsize_rule: const
+  c_stepsize_rule: dimin
   c_stepsize: 0.1
   save_state_interval: 20
