--- a/experiments/conf/alg/ssg.yaml
+++ b/experiments/conf/alg/ssg.yaml
@@ -5,7 +5,8 @@ params:
   batch_size: 32
   epochs: null
   save_iter: null
-  ctol: 0.1
+  ctol_rule: const
+  ctol: 0.0001
   f_stepsize_rule: const
   f_stepsize: 0.05
   c_stepsize_rule: dimin
