update readme, restructure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,4 +24,5 @@ readme = "README.md"
 
 
 [project.optional-dependencies]
+benchmark = ["fairret", "matplotlib", "pandas", "folktables", "pot", "hydra", "omegaconf"]
 ghost = ["qpsolvers", "scipy"]
