--- a/experiments/conf/experiment.yaml
+++ b/experiments/conf/experiment.yaml
@@ -2,7 +2,7 @@ defaults:
   - _self_
   # REMOVE
   - alg: sslalm
-  - constraint: eq_loss
+  - constraint: diff_loss
   - data: folktables
 
 alg: ???
