--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "humancompatible-train"
-version = "0.1.2"
+version = "0.1.3"
 dependencies = [
     "torch",
     "numpy",
@@ -24,5 +24,6 @@ readme = "README.md"
 
 
 [project.optional-dependencies]
+examples = ["ipykernel", "ipympl", "fairret", "folktables", "scikit-learn", "matplotlib"]
 benchmark = ["fairret", "matplotlib", "pandas", "folktables", "pot", "hydra", "omegaconf"]
 ghost = ["qpsolvers", "scipy"]
