--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -80,6 +80,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
+        pip install -U certifi
         pip install -r requirements.txt
         pip install -e .
     - name: Run algorithms
