--- a/experiments/conf/alg/ssg.yaml
+++ b/experiments/conf/alg/ssg.yaml
@@ -5,10 +5,11 @@ params:
   batch_size: 32
   epochs: null
   save_iter: null
-  ctol_rule: const
-  ctol: 0.0001
+  ctol_rule: dimin
+  ctol: 0.01
   f_stepsize_rule: const
   f_stepsize: 0.05
   c_stepsize_rule: dimin
-  c_stepsize: 0.5
-  save_state_interval: 50
+  c_stepsize: 0.25
+  save_state_interval: 100
+  # constr_start: 1500
